--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -41,7 +41,7 @@ nav{
 .home-grid{ 
   text-align: center;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr;
 }
 #background{
     height: 725px;
@@ -49,7 +49,7 @@ nav{
 body{
     background-color:rgb(241, 228, 79);
     font-family: 'Montserrat','Cormorant Garamond','Source Code Pro';
-    font-size: 22px;
+    font-size: 25px;
     margin: 0;
     padding: 0;
 }
