--- a/Malvernandmalcolm/index.css
+++ b/Malvernandmalcolm/index.css
@@ -14,7 +14,16 @@ body{
   margin-right:50px;
   padding: 0;
 }
+.intro{
+  font-family: 'Parisienne', 'cursive', 'Source Code Pro' ;
+}
 h3{
+  text-align: center;
+}
+h4{
+  text-align: center;
+}
+h2{
   text-align: center;
 }
 h1{
@@ -88,7 +97,8 @@ header{
 /* Add a black background color to the top navigation bar */
 .topnav {
     overflow: hidden;
-    background-color: #e9e9e9;
+    background-color:greenyellow;
+    padding: 5px;
   }
   
   /* Style the links inside the navigation bar */
@@ -99,12 +109,12 @@ header{
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 25px;
   }
   
   /* Change the color of links on hover */
   .topnav a:hover {
-    background-color: #ddd;
+    background-color:gray;
     color: black;
   }
   
