--- a/Malvernandmalcolm/index.css
+++ b/Malvernandmalcolm/index.css
@@ -15,7 +15,8 @@ body{
   padding: 0;
 }
 .intro{
-  font-family: 'Parisienne', 'cursive', 'Source Code Pro' ;
+  font-family: 'Italianno', 'cursive';
+  font-size: 60px;
 }
 h3{
   text-align: center;
