--- a/Malvernandmalcolm/index.css
+++ b/Malvernandmalcolm/index.css
@@ -32,10 +32,11 @@ h2{
   text-align: center;
 }
 h1{
-  font-size:35px;
+  font-size:50px;
   margin-top:103px;
   text-transform: uppercase;
   letter-spacing: 2px;
+  font-family: 'Italianno', 'cursive';
 }
 .sewing{
   width:20em;
