--- a/Malvernandmalcolm/index.css
+++ b/Malvernandmalcolm/index.css
@@ -18,6 +18,10 @@ body{
   font-family: 'Italianno', 'cursive';
   font-size: 60px;
 }
+.sew{
+  font-family: 'Italianno', 'cursive';
+  font-size: 60px;
+}
 .italic{
   font-family: 'Italianno', 'cursive';
   font-size: 60px;
